<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".yuzhu.Register">

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:orientation="vertical"-->
    <!--        android:background="@drawable/background"-->
    <!--        android:gravity="center">-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:paddingBottom="30dp"-->
    <!--            android:gravity="center">-->
    <!--            &lt;!&ndash;            <ImageView&ndash;&gt;-->
    <!--            &lt;!&ndash;                android:layout_width="80dp"&ndash;&gt;-->
    <!--            &lt;!&ndash;                android:layout_height="80dp"&ndash;&gt;-->
    <!--            &lt;!&ndash;                android:src="@mipmap/app_logigin"&ndash;&gt;-->
    <!--            &lt;!&ndash;                android:layout_gravity="center"&ndash;&gt;-->
    <!--            &lt;!&ndash;                />&ndash;&gt;-->
    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:text="欢迎！"-->

    <!--                android:textColor="#585757"-->
    <!--                android:textSize="25sp" />-->
    <!--        </LinearLayout>-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical"-->
    <!--            android:paddingBottom="20dp"-->
    <!--            android:paddingTop="20dp"-->
    <!--            >-->

    <!--            <EditText-->
    <!--                android:id="@+id/account"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_marginLeft="50dp"-->
    <!--                android:layout_marginRight="50dp"-->
    <!--                android:background="@null"-->
    <!--                android:hint="请输入账号"-->
    <!--                android:inputType="text"-->
    <!--                android:textColor="#303E8B"-->
    <!--                android:textColorHint="#ffffff" />-->
    <!--            <View-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="1dip"-->
    <!--                android:background="#83738F"-->
    <!--                android:layout_marginRight="40dp"-->
    <!--                android:layout_marginLeft="40dp"-->
    <!--                android:layout_marginTop="10dp"-->
    <!--                android:layout_marginBottom="5dp">-->

    <!--            </View>-->

    <!--            <EditText-->
    <!--                android:id="@+id/pwd"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_marginLeft="50dp"-->
    <!--                android:layout_marginRight="50dp"-->
    <!--                android:background="@null"-->
    <!--                android:hint="请输入密码"-->
    <!--                android:inputType="textPassword"-->
    <!--                android:textColor="#303E8B"-->
    <!--                android:textColorHint="#ffffff" />-->
    <!--        </LinearLayout>-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:paddingBottom="30dp"-->
    <!--            android:paddingTop="20dp"-->

    <!--            android:gravity="center"-->
    <!--            android:orientation="horizontal">-->
    <!--            <TextView-->
    <!--                android:id="@+id/register"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:text="还没有注册？点击注册"-->
    <!--                android:textColor="#303E8B"-->
    <!--                android:textSize="15sp"/>-->

    <!--        </LinearLayout>-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="horizontal">-->
    <!--            <Button-->
    <!--                android:id="@+id/login"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginLeft="40dp"-->
    <!--                android:layout_marginRight="40dp"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_weight="1"-->
    <!--                android:textSize="20dp"-->
    <!--                android:textColor="#ffffff"-->
    <!--                android:text="登录"-->
    <!--                android:background="@drawable/buttonstyle"-->
    <!--                />-->

    <!--        </LinearLayout>-->
    <!--    </LinearLayout>-->


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="昵称："
        android:textSize="20sp"
        android:textColor="#303E8B"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="218dp"
        android:background="@null"
        android:ems="10"
        android:hint="取一个好记的用户名吧"
        android:textColorHint="#ffffff"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:text="密码："
        android:textColor="#303E8B"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="51dp"
        android:background="@null"
        android:hint="请设置密码"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="167dp"
        android:background="@drawable/buttonstyle"
        android:text="注册"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>