<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbarsetting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="设置"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="#ffffff"
            android:textStyle="italic"
            />

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="确认旧密码:"
            android:layout_margin="5dp"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/oldpwd"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="输入新密码:"
            android:layout_margin="5dp"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/newpwd"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#ffa500"
            android:text="修改密码"
            android:textSize="20sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#A9A9"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#ff0000"
            android:text="退出登录"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
